--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-* Line and error bar plots
-  (Including the style factory)
-
 * Legends
   - Drawing legends off of the plot.
   - Make a 'legend plot'?
@@ -10,6 +7,8 @@
 * Compute better 'tick' locations on numeric axes
 
 ----------------------------------------
+
+* Give a graphical error message when failing to save from the GUI
 
 * Lines points plots
 
