--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ Things that we need before anyone can begin beta testing
 
 * Decide on a final API.
 
+* Change 'padding's to be percentages instead of absolute numbers.
+
 ------------------------------------------------------------
 GUI
 ------------------------------------------------------------
