Update the TODO.

--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@ Things that we need before anyone can begin beta testing
 
 * Decide on a final API.
 
-* Change 'padding's to be percentages instead of absolute numbers.
+* Rename the project to something better.
 
 ------------------------------------------------------------
 GUI
