--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 To build:
 
-ocamlbuild ml_plot_main.byte
+ocamlbuild caml_spt_main.byte
 or
-ocamlbuild ml_plot_main.native
+ocamlbuild caml_spt_main.native
 or
 ocm
 
