Save now takes the height and width as optional arguments

--- a/TODO
+++ b/TODO
@@ -47,11 +47,14 @@ Documentation
 
 * Write a real README file
 
+* Document the code
+
 * Generate OCaml docs
 
 ------------------------------------------------------------
 Usability
 ------------------------------------------------------------
+* Generate .mli files where possible / appropriate
 
 * Fix keyboard shortcuts
 
