avg_slope call added to the num_by_num dataset, and pushed through to all other num by num datasets.  Used to figure the average slope of a dataset, useful for computing the average slope of a plot, useful for skewing the plot for prettiness.

--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 Things that we need before anyone can begin beta testing
 ------------------------------------------------------------
 
+* Standard interface
+
 * Legacy module (in ps_plot)
 
 * Change how plots determine their size so the code isn't as sloppy
