--- a/TODO
+++ b/TODO
@@ -28,6 +28,10 @@ Extra features
 ------------------------------------------------------------
 Datasets
 ------------------------------------------------------------
+* Function Datasets (fn x -> y)
+  Sampling rate?
+
+* Scatter with Best Fit
 
 * Errbars should compute a residual so their cap is not chopped off
 
