--- a/TODO
+++ b/TODO
@@ -17,6 +17,8 @@ Extra features
 
 * Change text size based on plot size
 
+* Scatter plot matrix
+
 ------------------------------------------------------------
 Datasets
 ------------------------------------------------------------
