Update the TODO.

--- a/TODO
+++ b/TODO
@@ -43,6 +43,9 @@ Datasets
 
 * Bar charts (and with error bars)
 
+* Stacked bar charts
+  - Diffenent hash marks filling bars (for situations when there are no colors)
+
 * A color factory
 
 * Make sure that everything is colorable
