--- a/TODO
+++ b/TODO
@@ -25,7 +25,7 @@ Extra features
 Datasets
 ------------------------------------------------------------
 
-* Box plots
+* Grouped datasets for numeric by nominal
 
 * Heatmaps
   - Numeric by Numeric
