--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ Extra features
 ------------------------------------------------------------
 Datasets
 ------------------------------------------------------------
+* Make sure we present a consistent type to the world for all datasets
 
 * Box plots
 
