Updated todo list

--- a/TODO
+++ b/TODO
@@ -41,6 +41,8 @@ Datasets
 * Stacked bar charts
   - Diffenent hash marks filling bars (for situations when there are no colors)
 
+* Histograms
+
 * Make sure that everything is colorable
 
 * Montages: more complex than simple ps-montage style.
