Added another type of dataset to the todo list

--- a/TODO
+++ b/TODO
@@ -43,6 +43,8 @@ Datasets
 
 * Histograms
 
+* Box set dataset
+
 * Make sure that everything is colorable
 
 * Montages: more complex than simple ps-montage style.
