Try to do all clipping in the source coordinate system.

--- a/TODO
+++ b/TODO
@@ -14,6 +14,9 @@ Things that we need before anyone can begin beta testing
 * Add a constants file of some sort, or a configurable datafile that
   is read in
 
+
+* Fix residuals on label datasets (plot spt-debug with x_min=6.0)
+
 ------------------------------------------------------------
 Extra features
 ------------------------------------------------------------
