--- a/TODO
+++ b/TODO
@@ -17,6 +17,7 @@ Things that we need before anyone can begin beta testing
 ------------------------------------------------------------
 Extra features
 ------------------------------------------------------------
+
 * Add an edit menu to the gtk gui allowing for
       * Specify the size of the plot -- make sure to pre-populate dialogue
       * Turn color on / off
@@ -32,6 +33,7 @@ Datasets
 ------------------------------------------------------------
 
 * Histograms: fix the legend "icon"
+   - Hash marks filling the histograms
 
 * Make sure we present a consistent type to the world for all datasets
 
@@ -43,10 +45,6 @@ Datasets
 
 * Stacked bar charts
   - Diffenent hash marks filling bars (for situations when there are no colors)
-
-* Histograms
-
-* Box set dataset
 
 * Make sure that everything is colorable
 
