Update the TODO.

--- a/TODO
+++ b/TODO
@@ -79,6 +79,16 @@ Usability
   - Java?
 
 ------------------------------------------------------------
+spt-it-out
+------------------------------------------------------------
+
+* label datasets
+
+* scatter with errbar datasets
+
+* Simple arithmetic... mapping log10 over things, etc.
+
+------------------------------------------------------------
 Plot types
 ------------------------------------------------------------
 
