--- a/TODO
+++ b/TODO
@@ -31,6 +31,7 @@ Datasets
 * Histograms: fix the legend "icon"
    - Hash marks filling the histograms
    - Coloring w/ alpha values
+   - Don't throw a better error when given an empty set of values
 
 * CDF's need error bars
 
