--- a/TODO
+++ b/TODO
@@ -39,11 +39,17 @@ Datasets
   - Numeric by Numeric
   - Nominal by Nominal
 
-* Bar charts (and with error bars) -
-  Needs to have possibility of being filled with hash marks
-
 * Stacked bar charts
   - need to do some kind of different colorization of the stacked bars
+   -> My thought is to make each stacked dataset take a list of
+   barchart datasets.  It will then proceed to draw each bar from the
+   tallest to the shortest overlapping eachother.  This way the
+   drawing of bars is separated from the stacked chart and each bar
+   will be its own color (if the user gave them each different
+   colors).  Then, overwrite the draw_x_label (and x_label_height)
+   method for stacked so that it can draw the names each on their own
+   line from tallest to smallest followed by the name of the stack.
+
 
 * Make sure that everything is colorable
 
