Update the TODO.

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@ Extra features
 
 * Scatter plot matrix
 
+* Increase/decrease the number of error bars with the size of the plot?
+
 ------------------------------------------------------------
 Datasets
 ------------------------------------------------------------
