Better clipping for boxplots.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* Proper clipping for error bars.
+
 ------------------------------------------------------------
 Extra features
 ------------------------------------------------------------
